public/css/status.css
section.status-dashboard {
  color: black;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  margin: 1rem 0.75rem;
  height: calc(100% - 4.5rem);
}

div.status-settings {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1rem;
}

select.component-component {
  width: 10rem;
  height: 2rem;
  font-size: 1rem;
  background-color: white;
  border-radius: 5px;
  border: 1px solid black;
  box-shadow: 2px 2px 5px black;
}

div#table-container {
  width: 100%;
  height: 100%;
  position: relative;
}

label.logs-label {
  padding-left: 0.25rem;
}

#table-logs {
  display: block;
  empty-cells: show;
  border: 1px solid black;
  border-spacing: 0;
  border-collapse: collapse;
  background-color: whitesmoke;
  position: absolute;
  margin: 0.25rem;
  padding: 0.25rem;
  bottom: 0;
  top: 0;
  right: 0;
  left: 0;
}

